<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_suna"
        android:checked="false"
        android:icon="@drawable/nwafel"
        android:title="@string/suna" />

    <item
        android:id="@+id/navigation_hadeth"
        android:checked="false"
        android:icon="@drawable/hadeth"
        android:title="@string/hadeth" />
    <item
        android:id="@+id/navigation_quran"
        android:checked="true"
        android:icon="@drawable/quran"
        android:title="@string/quran" />

    <item
        android:id="@+id/navigation_tasbeh"
        android:checked="false"
        android:icon="@drawable/sebha"
        android:title="@string/sebha" />

    <item
        android:id="@+id/navigation_radio"
        android:checked="false"
        android:icon="@drawable/radio"
        android:title="@string/radio" />
</menu>